# python-carrer-page

./: .replit  README.md  app.py  pyproject.toml  tailwind.config.js
templates/: home.html  jobs.html
